--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node server.mjs",
     "tsc": "tsc",
     "build:client": "vite build --outDir dist/client",
-    "build:server": "vite build --outDir dist/server --ssr src/entry.server.tsx"
+    "build:server": "vite build --outDir dist/server --ssr src/entry.server.tsx",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -34,10 +35,18 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.2",
     "postcss": "8.4.21",
     "tailwindcss": "3.2.7",
     "typescript": "4.9.5",
     "url": "0.11.0",
     "vite": "4.1.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
