TEST: 파일도 코멘트로 달리나?

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -37,5 +37,4 @@ jobs:
       - name: Comment Build Results
         uses: thollander/actions-comment-pull-request@v2
         with:
-          message: |
-            Hello world ! :wave:
+          filePath: dist/client/stats.yml
