--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -35,6 +35,7 @@ jobs:
         run: npm run build
 
       - name: Comment Build Results
-        uses: thollander/actions-comment-pull-request@v2
+        uses: actions/upload-artifact@v3
         with:
-          filePath: dist/client/stats.html
+          name: client-build
+          path: dist/client/stats.html
