--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "5.53.0",
     "@vitejs/plugin-react-swc": "3.2.0",
     "autoprefixer": "10.4.13",
+    "bundlewatch": "0.3.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "eslint-config-prettier": "8.6.0",
