--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -3,6 +3,11 @@ name: CI ON PULL REQUEST
 on:
   pull_request:
 
+env:
+  BUNDLEWATCH_GITHUB_TOKEN: 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
+  CI_REPO_OWNER: HamSungJun
+  CI_REPO_NAME: react-beta-docs-follow
+
 jobs:
   ci:
     runs-on: macos-latest
