--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "node server.mjs",
     "tsc": "tsc",
+    "build": "vite build && vite build --ssr",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --outDir dist/server --ssr src/entry.server.tsx",
     "prepare": "husky install",
