--- a/bundlewatch.config.json
+++ b/bundlewatch.config.json
@@ -1,10 +1,12 @@
 {
   "files": [
     {
-      "path": "dist/client/assets/*.js"
+      "path": "dist/client/assets/*.js",
+      "maxSize": "500kb"
     },
     {
-      "path": "dist/server/assets/*.js"
+      "path": "dist/server/assets/*.js",
+      "maxSize": "500kb"
     }
   ],
   "ci": {
