--- a/.github/workflows/bundle-watch.yml
+++ b/.github/workflows/bundle-watch.yml
@@ -5,8 +5,9 @@ on:
     branches:
       - develop
   pull_request:
-    branches-ignore:
-      - develop
+    branches:
+      - 'work/**'
+      - 'kevin/**'
   workflow_dispatch:
 
 jobs:
